strongswan-4.2.5
----------------

- management of different virtual IP pools for different
  network interfaces have become possible.

- fixed a bug which prevented the assignment of more than 256 
  virtual IP addresses from a pool managed by an sql database.

 
strongswan-4.2.4
----------------

- Added statistics functions to ipsec pool --status and ipsec pool --leases
  and input validation checks to various ipsec pool commands.

- ipsec statusall now lists all loaded charon plugins and displays
  the negotiated IKEv2 cipher suite proposals.

- The openssl plugin supports the elliptic curve Diffie-Hellman groups
  19, 20, 21, 25, and 26.

- The openssl plugin supports ECDSA authentication using elliptic curve
  X.509 certificates.

- Fixed a bug in stroke which caused multiple charon threads to close
  the file descriptors during packet transfers over the stroke socket.
 
- ESP sequence numbers are now migrated in IPsec SA updates handled by
  MOBIKE. Works only with Linux kernels >= 2.6.17.


strongswan-4.2.3
----------------

- Fixed the strongswan.conf path configuration problem that occurred when 
  --sysconfig was not set explicitly in ./configure.

- Fixed a number of minor bugs that where discovered during the 4th
  IKEv2 interoperability workshop in San Antonio, TX.


strongswan-4.2.2
----------------

- Plugins for libstrongswan and charon can optionally be loaded according
  to a configuration in strongswan.conf. Most components provide a
  "load = " option followed by a space separated list of plugins to load.
  This allows e.g. the fallback from a hardware crypto accelerator to
  to software-based crypto plugins.

- Charons SQL plugin has been extended by a virtual IP address pool.
  Configurations with a rightsourceip=%poolname setting query a SQLite or
  MySQL database for leases. The "ipsec pool" command helps in administrating
  the pool database. See ipsec pool --help for the available options
